--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="Mattioli.OS" />
-  <link rel="apple-touch-icon" href="/mattioli.OS/pwa-icon-restored.png" />
+  <link rel="apple-touch-icon" href="/mattioli.OS/pwa-icon-v5.png" />
 </head>
 
 <body>
